--- a/index.html
+++ b/index.html
@@ -397,12 +397,12 @@
                 <div id="contacts-title">
                     <p>Наши контакты</p>
                 </div>
-                <ul class="list-unstyled">
+               <ul class="list-unstyled">
                     <li>
-                      <p><i class="fa fa-phone pe-2"></i> + 01 234 567 89</p>
+                     <a href=""><p><i class="fa fa-phone pe-2"></i> + 01 234 567 89</p></a>
                     </li>
                     <li>
-                      <p><i class="fa fa-envelope pe-2 mb-0"></i> contact@example.com</p>
+                      <a href=""><p><i class="fa fa-envelope pe-2 mb-0"></i> contact@example.com</p></a>
                     </li>
                   </ul>
 
